--- a/Product_page.html
+++ b/Product_page.html
@@ -12,7 +12,7 @@
             <h1 style="font-size: 4em;">MISS COFFEE AND BEAN</h1><br><br>
             <h2 style="text-align: center; color:chocolate; font-size:2.5em;"><u><i>Sale now on  ! ! !</i></u></h2>
             <a href="#" class="logo">
-                <img src="images/miss beans logo.png" alt="logo" >
+                <img src="miss beans logo.png" alt="logo" >
             </a>
             <p style="margin-left:0.5cm;"><i>The taste that makes the difference!</i></p>
             <nav>
@@ -48,20 +48,20 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="images/Extra Creamy, extra tastee.png" alt="drink">
+                            <img src="Extra Creamy, extra tastee.png" alt="drink">
                         </td>
 
                         <td>
-                            <img src="images/4 frap.png" alt="beans" style="width: 500px, border-radius=250px">
+                            <img src="4 frap.png" alt="beans" style="width: 500px, border-radius=250px">
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <img src="images/choose beans.png" alt="beans">
+                            <img src="choose beans.png" alt="beans">
                         </td>
 
                         <td>
-                            <img src="images/tea1.png" alt="tea" style="width:500px , border-radius=250px">
+                            <img src="tea1.png" alt="tea" style="width:500px , border-radius=250px">
                         </td>
 
                     </tr>
@@ -86,7 +86,7 @@
                     <td>
             
                         <div class="image-container">
-                        <img src="images/organic dark roast.png" alt="organic roast">
+                        <img src="organic dark roast.png" alt="organic roast">
                         <div class="product-item">
                         <label>SUMATRA DARK ROAST</label><br>
                         <span>Product 1</span>- Price: $23.00 | Available: <span id="quantity1">50</span><br>
@@ -97,7 +97,7 @@
 
                     <td>
                         <div class="image-container">
-                        <img src="images/blue moon dark roast.png" alt="blue moon">
+                        <img src="blue moon dark roast.png" alt="blue moon">
                         <div class="product-item"></div>
                         <label>BALI BLUE MOON DARK ROAST</label><br>
                         <span>Product 2</span>- Price: $22.00 | Available: <span id="quantity2">12</span><br>
@@ -110,7 +110,7 @@
                 <tr>
                     <td>
                         <div class="image-container">
-                        <img src="images/Blend coffee medium roast.png" alt="blend">
+                        <img src="Blend coffee medium roast.png" alt="blend">
                         <div class="product-item"></div>
                         <label>BLEND COFFEE MEDIUM ROAST</label><br>
                         <span>Product 3</span>- Price: $25.00 | Available: <span id="quantity3">21</span><br>
@@ -122,7 +122,7 @@
 
                     <td>
                         <div class="image-container">
-                        <img src="images/Brulee coffee Medium roast.png" alt="Brulee">
+                        <img src="Brulee coffee Medium roast.png" alt="Brulee">
                         <div class="product-item"></div>
                         <label>BRULEE COFFEE MEDIUM ROAST</label><br>
                         <span>Product 4</span>- Price: $26.00 | Available: <span id="quantity4">26</span><br>
@@ -135,7 +135,7 @@
                 <tr>
                     <td>
                         <div class="image-container">
-                        <img src="images/colombia dark roast.png" alt="colombia dark">
+                        <img src="colombia dark roast.png" alt="colombia dark">
                         <div class="product-item"></div>
                         <label>COLOMBIA DARK ROAST</label><br>
                         <span>Product 5</span>- Price: $20.00 | Available: <span id="quantity5">19</span><br>
@@ -146,7 +146,7 @@
 
                     <td>
                         <div class="image-container">
-                        <img src="images/colombia medium roast.png" alt="colombia medium">
+                        <img src="colombia medium roast.png" alt="colombia medium">
                         <div class="product-item"></div>
                         <label>COLOMBIA DARK ROAST</label><br>
                         <span>Product 6</span>- Price: $21.99 | Available: <span id="quantity6">34</span><br>
@@ -159,7 +159,7 @@
                 <tr>
                     <td>
                         <div class="image-container">
-                        <img src="images/Hazenut Medium Roast.png" alt="hazenut">
+                        <img src="Hazenut Medium Roast.png" alt="hazenut">
                         <div class="product-item"></div>
                         <label>HAZENUT MEDIUM ROAST</label><br>
                         <span>Product 7</span>- Price: $20.99 | Available: <span id="quantity7">29</span><br>
@@ -170,7 +170,7 @@
 
                     <td>
                         <div class="image-container">
-                        <img src="images/Ground coffee medium roast.png" alt="ground coffee">
+                        <img src="Ground coffee medium roast.png" alt="ground coffee">
                         <div class="product-item"></div>
                         <label>GROUND COFFEE MEDIUM ROAST</label><br>
                         <span>Product 8</span>- Price: $19.99 | Available: <span id="quantity8">25</span><br>
@@ -183,7 +183,7 @@
                 <tr>
                     <td>
                         <div class="image-container">
-                        <img src="images/French dark roast.png" alt="french coffee">
+                        <img src="French dark roast.png" alt="french coffee">
                         <div class="product-item"></div>
                         <label>FRENCH DARK ROAST</label><br>
                         <span>Product 9</span>- Price: $23.99 | Available: <span id="quantity9">31</span><br>
@@ -194,7 +194,7 @@
 
                     <td>
                         <div class="image-container">
-                        <img src="images/House Blend Light Roast.png" alt="house blend">
+                        <img src="House Blend Light Roast.png" alt="house blend">
                         <div class="product-item"></div>
                         <label>HOUSE BLEND LIGHT ROAST</label><br>
                         <span>Product 10</span>- Price: $27.99 | Available: <span id="quantity9">36</span><br>
