--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <header class="header">
             <h1>MISS COFFEE AND BEAN</h1>
             <a href="#" class="logo">
-                <img src="images/miss beans logo.png" alt="logo" >
+                <img src="miss beans logo.png" alt="logo" >
             </a>
             <p style="margin-left:0.5cm;"><i>The taste that makes the difference!</i></p>
             <nav>
