--- a/Invoice.html
+++ b/Invoice.html
@@ -3,73 +3,212 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invoice</title>
+    <title>Invoice - Miss Coffee And Beans</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-        <!--header section starts-->
-        <header class="header">
-            <h1>MISS COFFEE AND BEAN</h1>
-            <a href="#" class="logo">
-                <img src="miss beans logo.png" alt="logo" >
-            </a>
-            <p style="margin-left:0.5cm;"><i>The taste that makes the difference!</i></p>
-            <nav>
-                <ul>
-                    <li><a href="Product_page.html">Products</a></li>
-                    <li><a href="Invoice.html">Invoice</a></li>
-                    <li><a href="about.html">About</a></li>
-    
-                    <div class="icons">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <i class="fa-solid fa-cart-shopping"></i>
-                   
-                </div>
-                </ul>
-            </nav>
-        </header>
-    <h1 style="text-align: center; color:chocolate"><u>Invoice</u></h1>
-    <div id="invoice-details"></div>
-
-    <div class="cancel-Btn">
-        <button id="cancelBtn">Cancel</button>
-    </div><br>
-
-    <div class="exit-Btn">
-        <button id="exitBtn">Exit</button>
-    </div><br>
-
-    <script>
-        // Gets invoice data from localStorage
-        const invoiceData = JSON.parse(localStorage.getItem('invoiceData'));
-
-        if (invoiceData) {
-            const invoiceDetails = `
-                <h2>Products:</h2>
-                <ul>
-                    ${invoiceData.cartItems.map(item => `
-                        <li>${item.name} - $${item.price} x ${item.cartQuantity}</li>
-                    `).join('')}
-                </ul>
-                <p><strong>Subtotal:</strong> $${invoiceData.subtotal}</p>
-                <p><strong>Tax (15%):</strong> $${invoiceData.tax}</p>
-                <p><strong>Discount:</strong> -$${invoiceData.discount}</p>
-                <p><strong>Total:</strong> $${invoiceData.total}</p>
-            `;
-
-            document.getElementById('invoice-details').innerHTML = invoiceDetails;
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: 'Poppins', sans-serif;
+            color: #333;
         }
 
-        // Cancel button - clear invoice and return to the product page
-        document.getElementById('cancelBtn').addEventListener('click', () => {
-            localStorage.removeItem('invoiceData');
-            window.location.href = 'Product_page.html';
-        });
+        header.header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: beige;
+            padding: 15px 40px;
+            border-bottom: 2px solid chocolate;
+        }
 
-        // Exit button to close the invoice page
-        document.getElementById('exitBtn').addEventListener('click', () => {
-            window.close(); 
-        });
-    </script>
+        header.header img {
+            width: 60px;
+            border-radius: 50%;
+        }
+
+        header.header h1 {
+            color: chocolate;
+            font-style: italic;
+            margin-left: 15px;
+        }
+
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: chocolate;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        nav a:hover {
+            color: #6b4226;
+        }
+
+        h1 {
+            text-align: center;
+            color: chocolate;
+            margin: 30px 0;
+        }
+
+        .invoice-card {
+            background: #fff;
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+        }
+
+        .invoice-card table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .invoice-card th, .invoice-card td {
+            padding: 12px 15px;
+            text-align: left;
+        }
+
+        .invoice-card th {
+            background-color: chocolate;
+            color: white;
+            font-weight: 600;
+            border-radius: 8px 8px 0 0;
+        }
+
+        .invoice-card tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        .invoice-card tr:nth-child(odd) {
+            background-color: #fff;
+        }
+
+        .invoice-totals {
+            margin-top: 20px;
+            text-align: right;
+        }
+
+        .invoice-totals p {
+            font-size: 1.1em;
+            margin: 5px 0;
+        }
+
+        .invoice-totals h3 {
+            font-size: 1.3em;
+            margin-top: 10px;
+        }
+
+        .btn-group {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .btn-group button {
+            padding: 12px 25px;
+            border-radius: 25px;
+            border: none;
+            cursor: pointer;
+            font-weight: bold;
+            transition: transform 0.3s ease;
+        }
+
+        #cancelBtn {
+            background-color: burlywood;
+            color: #fff;
+        }
+
+        #exitBtn {
+            background-color: chocolate;
+            color: #fff;
+        }
+
+        .btn-group button:hover {
+            transform: scale(1.05);
+        }
+
+    </style>
+</head>
+<body>
+
+<header class="header">
+    <div style="display:flex; align-items:center;">
+        <img src="miss beans logo.png" alt="logo">
+        <h1>MISS COFFEE AND BEAN</h1>
+    </div>
+    <nav>
+        <a href="Product_page.html">Products</a>
+        <a href="Invoice.html">Invoice</a>
+        <a href="about.html">About</a>
+    </nav>
+</header>
+
+<h1>Invoice</h1>
+
+<div class="invoice-card" id="invoice-details">
+    <!-- Invoice will be generated here -->
+</div>
+
+<div class="btn-group">
+    <button id="cancelBtn">Cancel</button>
+    <button id="exitBtn">Exit</button>
+</div>
+
+<script>
+const cart = JSON.parse(localStorage.getItem("invoiceData"));
+const invoiceDiv = document.getElementById("invoice-details");
+
+if (!cart || cart.length === 0) {
+    invoiceDiv.innerHTML = "<h3 style='text-align:center;'>Your cart is empty.</h3>";
+} else {
+
+    let subtotal = 0;
+    cart.forEach(item => subtotal += item.price * item.cartQuantity);
+    const tax = subtotal * 0.15;
+    const discount = subtotal > 100 ? subtotal * 0.10 : 0;
+    const total = subtotal + tax - discount;
+
+    invoiceDiv.innerHTML = `
+        <h2 style="color:chocolate;">Purchased Items</h2>
+        <table>
+            <tr>
+                <th>Product</th>
+                <th>Price ($)</th>
+                <th>Quantity</th>
+                <th>Total ($)</th>
+            </tr>
+            ${cart.map(item => `
+                <tr>
+                    <td>${item.name}</td>
+                    <td>${item.price.toFixed(2)}</td>
+                    <td>${item.cartQuantity}</td>
+                    <td>${(item.price * item.cartQuantity).toFixed(2)}</td>
+                </tr>
+            `).join('')}
+        </table>
+
+        <div class="invoice-totals">
+            <p><strong>Subtotal:</strong> $${subtotal.toFixed(2)}</p>
+            <p><strong>Tax (15%):</strong> $${tax.toFixed(2)}</p>
+            <p><strong>Discount:</strong> -$${discount.toFixed(2)}</p>
+            <h3><strong>Grand Total:</strong> $${total.toFixed(2)}</h3>
+        </div>
+    `;
+}
+
+// Cancel → clear invoice + return to products
+document.getElementById("cancelBtn").addEventListener("click", () => {
+    localStorage.removeItem("invoiceData");
+    window.location.href = "Product_page.html";
+});
+
+// Exit → close tab
+document.getElementById("exitBtn").addEventListener("click", () => {
+    window.close();
+});
+</script>
+
 </body>
 </html>
